Pascal/test/cohadar/pascal/errors/expected_reference.pas
program test;

procedure njak(var x:integer);
begin
end;

begin
	njak(3);
end.